crates/forge_provider/src/openai/snapshots/forge_provider__openai__request__tests__tool_message_conversion.snap
---
source: crates/forge_provider/src/openai/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "{\n               \"user\": \"John\",\n               \"age\": 30,\n               \"address\": [{\"city\": \"New York\"}, {\"city\": \"San Francisco\"}]\n            }",
  "name": "test_tool",
  "tool_call_id": "123"
}
