crates/forge_provider/src/openai/snapshots/forge_provider__openai__request__tests__tool_message_typescript_code.snap
---
source: crates/forge_provider/src/openai/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "{ \"code\": \"fn main<T>(gt: T) {let b = &gt; }\"}",
  "name": "rust_tool",
  "tool_call_id": "456"
}
