crates/forge_provider/src/openai/snapshots/forge_provider__openai__request__tests__user_message_conversion.snap
---
source: crates/forge_provider/src/openai/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "user",
  "content": "Hello"
}
